# progressive-skills-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
.github/workflows/: backend-ci.yml  skills-ci.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/adk_app/: .env.example  __init__.py  agent.py  agent_factory.py  code_executor.py  demo_db.py  demo_tools.py  progressive_skill_toolset.py
backend/harness/: eval_helpers.py  generate_multistep_evals.py  lint_skills.py  patch_skill_metadata.py  phase5_summary.py  regression_eval.py  token_budget_report.py  token_helpers.py
backend/server/: __init__.py  main.py  routes_admin.py  routes_chat.py
backend/tests/: test_demo_tools.py  test_evals.py  test_offtopic.py  test_progressive_skills.py  test_skill_frontmatter.py
evals/: README.md  appointment-slot-finder.evalset.json  eval_config.json  government-fee-payment-draft.evalset.json  iqama-renewal-status.evalset.json  traffic-violation-lookup.evalset.json
evals/configs/: appointment-slot-finder.json  traffic-violation-lookup.json
evals/results/: README.md  adversarial_and_unit.txt  adversarial_routing_report.md  adversarial_routing_run.txt  appointment-slot-finder_eval.txt  edd_multistep_refactor_notes.md  fee_appt_retry.txt  fee_eval_after_skill_fix.txt  final_eval_suite.txt  final_eval_suite2.txt  final_eval_suite3.txt  final_eval_suite4.txt  full_eval_report.md  full_multistep_eval_run.txt  full_multistep_eval_run2.txt  full_multistep_eval_run3.txt  iqama_adv_retry.txt  (+14 more)
frontend/: Dockerfile  README.md  next.config.ts
(+16 files in other folders)
